Updated Dutch version

--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -21,7 +21,7 @@ p {
   margin: 25px 50px 50px 25px;
   width: 455px;
   height: 289px;
-  background: url("../images/idcard.png");
+  background: url("../images/id_template_m.png");
   background-repeat: no-repeat;
   background-size: 455px 289px;
 }
